<resources>
    <!--    Label or other views strings    -->
    <string name="app_name">keepin</string>
    <string name="title_profile">Profile</string>
    <string name="title_discover">Discover</string>
    <string name="title_contacts">Contacts</string>
    <string name="tab_search">SEARCH</string>
    <string name="tab_notifications">NOTIF.</string>

    <string name="lblUserName">Username</string>
    <string name="unknown_parameter">Permission not granted</string>

    <string name="request_information">Request information</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone number</string>

    <!--    Keys    -->
    <string name="saved_contacts_key">contacts</string>
    <string name="saved_informations_key">MyInformations</string>
    <string name="saved_username_key">username</string>
    <string name="endpoint_id_key">endpoint_id</string>
    <string name="firstname_key">firstname</string>
    <string name="lastname_key">lastname</string>

    <!--    Message sent with Nearby    -->
    <string name="message_ask_for_permission">permissionsAsked</string>

    <!--    Toast messages    -->
    <string name="error_missing_permissions">Cannot start without required permissions</string>
    <string name="toast_discover">Discovering nearby users...</string>
    <string name="toast_connected">Connected to %s</string>
    <string name="toast_disconnected">Disconnected from %s</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="save_contact">Save Contact</string>

    <!--   Social medias -->

    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">Linked In</string>

</resources>
